--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -54,7 +54,7 @@ a {
   font-size: 1.7rem;
 }
 
-/* MAIN SECTION */
+/* ----- MAIN SECTION ----- */
 
 .mainSecContainer {
   margin: 0;
@@ -93,7 +93,7 @@ a {
   position: relative;
 }
 
-/* BALANCE */
+/* ----- BALANCE ----- */
 
 .balImage {
   width: 120px;
@@ -127,7 +127,7 @@ a {
   font-weight: 500;
 }
 
-/* EXPENSES */
+/* ----- EXPENSES ----- */
 
 .totalExpenses {
   display: flex;
@@ -164,7 +164,7 @@ a {
   z-index: 2;
 }
 
-/* RECENT ACTIVITY */
+/* ----- RECENT ACTIVITY ------ */
 
 .historyImg {
   width: 35px;
@@ -246,5 +246,184 @@ a {
 .addIconContainer {
   bottom: -38px;
   position: absolute;
+  cursor: pointer;
+}
+
+/* ----- MODALS -----*/
+.addActivityModal {
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+
+.addActivityContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 16% auto;
+  margin-left: 45%;
+  background-color: white;
+  width: 500px;
+  padding-bottom: 50px;
+  border-radius: 10px;
+  position: relative;
+}
+
+.choices {
+  display: flex;
+  gap: 20px;
+  margin-top: 10px;
+}
+
+.activityTop {
+  display: flex;
+  align-items: center;
+}
+
+.modalTop h1 {
+  margin-top: 30px;
+}
+
+.closeBtn {
+  width: 32px;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
+}
+
+/* Add Expenses Modal */
+
+.addExpenses {
+  background-color: rgb(130, 132, 255);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 180px;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.addExpenses img {
+  width: 90px;
+}
+
+.addExpenses h1 {
+  font-size: 1.4rem;
+  color: white;
+  font-weight: 500;
+  font-family: "Roboto Mono";
+}
+
+/* Deposit Modal */
+
+.deposit {
+  background-color: rgb(224, 225, 255);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 180px;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.deposit img {
+  width: 90px;
+  margin-bottom: 0;
+}
+
+.deposit h1 {
+  font-size: 1.4rem;
+  color: black;
+  font-weight: 700;
+  font-family: "Roboto Mono";
+  margin-top: 10px;
+}
+
+/* SELECT TYPE MODAL */
+
+.selectTypeModal {
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+
+.selectTypeContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  width: 400px;
+  height: 440px;
+  border-radius: 10px;
+  position: relative;
+  margin: 16% auto;
+  margin-left: 50%;
+}
+
+.selectTypeTop {
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+  margin-top: 5px;
+}
+
+.selectTypeTop img {
+  width: 27px;
+  position: absolute;
+  top: 10px;
+  left: 12px;
+  cursor: pointer;
+}
+
+.selectTypeTop h1 {
+  font-size: 1.8rem;
+}
+
+.selectTypeChoices {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 17px;
+}
+
+.selectTypeChoices img {
+  width: 25px;
+}
+
+.selectTypeChoices h3 {
+  font-weight: 500;
+  font-size: 1rem;
+  font-family: "Roboto Mono";
+}
+
+.grocery,
+.foods,
+.clothes,
+.bills,
+.shopping,
+.education,
+.others {
+  display: flex;
+  align-items: center;
+  background-color: RGB(130, 132, 255);
+  color: white;
+  gap: 10px;
+  padding: 2px 15px;
+  border-radius: 10px;
+  margin-bottom: 10px;
   cursor: pointer;
 }
