--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -181,9 +181,10 @@ a {
 .recentActWrapper {
   background-color: rgb(243, 243, 243);
   width: 800px;
+  height: 470px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+
   align-items: center;
   border-radius: 20px;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
